        - Added Service#context property.
        - Added Component(String) constructor for XML configuration.
        - Completed XML configuration XSD scheme to match more of Restlet API.
        - Added LogService#logPropertiesRef to easily read log properties from 
		  a URI at start time.
		- Added setDefaultAttachment() method to SpringHost and SpringRouter.
    - Bugs fixed
        - Fixed issue in DomRepresentation with createTransformer()
          method. Fix contributed by Remi Dewitte. 
        - Validator#validate() method was protected instead of public.
          Reported by Ben R. Vesco.
        - Fixed issue in Validator causing an error when a non 
          required attribute is not found. 
          Reported by Laurent Rustuel.
        - Fixed NPE when parsing "Date" header in the GWT edition.
        - Fixed issue with automatic setting of 204 when no entity
          was available and the status was 200. The logic has been
          moved from the HTTP server connectors to the ServerResource.
          Reported by Bruno Harbulot.
        - Relaxed tunneling of user agent string.
          Reported by Erick Fleming and Fabian Mandelbaum.
        - Fixed potential infinite loop when getting the Engine 
          instance.
        - Fixed RepresentationContext#getCharacterEncoding method in 
          the fileupload which did not return the character set.
          Reported by Carsten Lohmann.
        - Fixed potential NPE in engine's LogFilter class.
          Reported by Jeff Ramsdale.
        - Fixed potential BufferOverflowException in 
          NbChannelOutputStream.
          Reported by David Fogel and Iestyn Evans.
        - Fixed internal client connector which didn't refresh entity 
          properties from headers values.
          Reported by Taylor Cowan.
        - Allowed to set the DATE header.
        - Fixed support of chunked response in the Netty connector.
          Reported by Laurent Rustuel.
    - Misc